--- a/joey-photo/src/index.css
+++ b/joey-photo/src/index.css
@@ -25,7 +25,8 @@
 
 a {
   font-weight: 500;
-  color:#D4C09E;
+  /* color:#D4C09E; */
+  color: white;
   
   text-decoration: inherit;
 }
@@ -33,8 +34,8 @@ a {
 
 
 a:hover {
-  /* color:#1B1B1B; */
-  color: white;
+  color:#D4C09E;
+  
 }
 
 body {
