--- a/joey-photo/src/index.css
+++ b/joey-photo/src/index.css
@@ -24,6 +24,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+
+html {
+  scroll-behavior: smooth;
+}
+
 a {
   font-weight: 500;
   /* color:#D4C09E; */
