--- a/joey-photo/src/index.css
+++ b/joey-photo/src/index.css
@@ -64,7 +64,7 @@ h1 { font-size: 3rem; line-height: 1.05; font-weight: 700; }
 h2 { font-size: 1.75rem; font-weight: 700; }
 h3 { font-size: 1.25rem; font-weight: 600; }
 
-button {
+/* button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -75,7 +75,7 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
   
-}
+} */
 button:hover {
   border-color: white;
 }
