--- a/joey-photo/src/index.css
+++ b/joey-photo/src/index.css
@@ -64,18 +64,7 @@ h1 { font-size: 3rem; line-height: 1.05; font-weight: 700; }
 h2 { font-size: 1.75rem; font-weight: 700; }
 h3 { font-size: 1.25rem; font-weight: 600; }
 
-/* button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  
-  cursor: pointer;
-  transition: border-color 0.25s;
-  
-} */
+
 button:hover {
   border-color: white;
 }
@@ -84,6 +73,16 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+
+/*Bouton about mon histoire*/ 
+.bouton-about {
+  color:#D4C09E;
+}
+
+.bouton-about:hover {
+  color: white; 
+  background-color: #D4C09E; 
+}
 
 
 
